--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = mongodb+srv://admin:admin@talenesia-web.gruqw7p.mongodb.net/
+DATABASE_URL = mongodb+srv://admin:admin@talenesia-web.gruqw7p.mongodb.net/talenesia
 AUTH_SECRET = "talenesia-jaya"
