add opeen close date subcorse

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL = mongodb+srv://admin:admin@talenesia-web.gruqw7p.mongodb.net/talenesia-testing
-AUTH_SECRET = "talenesia-jaya"
+DATABASE_URL=mongodb+srv://admin:admin@talenesia-web.gruqw7p.mongodb.net/talenesia-diploy
+AUTH_SECRET="talenesia-jaya"
