--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=mongodb+srv://admin:admin@talenesia-web.gruqw7p.mongodb.net/talenesia-diploy
+DATABASE_URL=mongodb+srv://admin:admin@talenesia-web.gruqw7p.mongodb.net/talenesia-deploy
 AUTH_SECRET="talenesia-jaya"
